--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,9 @@ dkms.conf
 
 # build
 build
+
+# glfw lib
+!deps/glfw3/lib-mingw-w64/*.a
+!deps/glfw3/lib-mingw-w64/*.dll
+!deps/glfw3/lib-static-ucrt/*.lib
+!deps/glfw3/lib-static-ucrt/*.dll
